fixed scrollbar

--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,10 @@
 body, html {
     cursor: url("./imgs/Normal.cur"), auto;
-    height: 100%;
+    height: 100%
 }
 body {
+    margin: 0;
+    padding: 0;
     font-family: 'Times New Romn', Times, serif;
     display: flex;
     flex-direction: column;
